RESOLVED FIXED181121
[Web Animations] Unflake web-animations/timing-model/animations/updating-the-finished-state.html WPT test
https://bugs.webkit.org/show_bug.cgi?id=181121
Summary [Web Animations] Unflake web-animations/timing-model/animations/updating-the-...
Antoine Quint
Reported 2017-12-22 02:38:43 PST
Following the fix for https://bugs.webkit.org/show_bug.cgi?id=180402, the test at http/wpt/web-animations/timing-model/animations/updating-the-finished-state.html has flaky failures and a timeout: -PASS Updating the finished state when playing past end +FAIL Updating the finished state when playing past end assert_equals: Hold time is set to target end clamping current time expected 100000 but got 100028.2 PASS Updating the finished state when seeking past end PASS Updating the finished state when seeking exactly to end -PASS Updating the finished state when playing in reverse past zero +FAIL Updating the finished state when playing in reverse past zero assert_equals: Hold time is set to zero clamping current time expected 0 but got -13.300000000000006 PASS Updating the finished state when seeking a reversed animation past zero FAIL Updating the finished state when seeking a reversed animation exactly to zero assert_equals: Hold time is set so current time should NOT change expected 0 but got -0 PASS Updating the finished state when playing before end @@ -18,11 +18,11 @@ PASS Updating the finished state when start time is unresolved and did seek = false PASS Updating the finished state when start time is unresolved and did seek = true PASS Finish notification steps don't run when the animation seeks to finish and then seeks back again -PASS Finish notification steps run when the animation completes normally -PASS Finish notification steps run when the animation seeks past finish -PASS Finish notification steps run when the animation completes with .finish(), even if we then seek away -PASS Animation finished promise is replaced after seeking back to start -PASS Animation finished promise is replaced after replaying from start +TIMEOUT Finish notification steps run when the animation completes normally Test timed out +NOTRUN Finish notification steps run when the animation seeks past finish +NOTRUN Finish notification steps run when the animation completes with .finish(), even if we then seek away +NOTRUN Animation finished promise is replaced after seeking back to start +NOTRUN Animation finished promise is replaced after replaying from start PASS Animation finish event is fired again after seeking back to start -TIMEOUT Animation finish event is fired again after replaying from start Test timed out +PASS Animation finish event is fired again after replaying from start
Attachments
Patch (6.84 KB, patch)
2019-09-24 08:44 PDT, Antoine Quint
dino: review+
Antoine Quint
Comment 2 2019-09-24 08:44:45 PDT
Dean Jackson
Comment 3 2019-09-24 09:50:36 PDT
Congrats on making a new word! Unflake. Like Congrats.
Antoine Quint
Comment 4 2019-09-24 10:02:21 PDT
Radar WebKit Bug Importer
Comment 5 2019-09-24 10:03:20 PDT
Note You need to log in before you can comment on or make changes to this bug.