[Web Animations] Unflake web-animations/timing-model/animations/updating-the-finished-state.html WPT test https://bugs.webkit.org/show_bug.cgi?id=181121

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/web-animations/timing-model/animations/updating-the-finished-state-expected.txt:

Source/WebCore:

When running the "update animations and send events" steps (https://drafts.csswg.org/web-animations/#update-animations-and-send-events)
we assemble a list of animations to remove after updating their relevance based on the new timeline current time. However, we wouldn't
account for the fact that we would *then* dispatch events which could update the timing properties of animations that had been marked
for removal at this point.

In this specific WPT test, there were two individual tests that would rewind animations within a "finish" event handler and we would
not consider the fact that they had been rewound. We now check a second time before removing an animation that it should indeed be
removed.

* animation/DocumentTimeline.cpp:
(WebCore::DocumentTimeline::internalUpdateAnimationsAndSendEvents):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/215751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250303 268f45cc-cd09-0410-ab3c-d52691b4dbfc